--- a/src/main/webapp/WEB-INF/templates/my-menu.html
+++ b/src/main/webapp/WEB-INF/templates/my-menu.html
@@ -24,6 +24,9 @@
             <li class="nav-item" th:classappend="${activeTab == 'StudentsList' ? 'active' : ''}">
                 <a class="nav-link" href="/students/list">Students List</a>
             </li>
+            <li class="nav-item" th:classappend="${activeTab == 'BooksList' ? 'active' : ''}">
+                <a class="nav-link" href="/books/list">Books List</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Courses Info</a>
             </li>
